Bug 411992 - kmail poorly written notification text if no password entered to collect email
Summary: kmail poorly written notification text if no password entered to collect email
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.12.1
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-17 11:11 UTC by James Th
Modified: 2019-10-15 06:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.13.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description James Th 2019-09-17 11:11:10 UTC
SUMMARY

Currently if Kmail cannot connect to the email server, due to it not remembering the password, then the notification comes up "Resource Mail (james) is broken".  It's not broken, it's more that it doesn't have the password. So I think that this is a poorly-written notification text. Something like "KMail is unable to connect to the mail server, as no password has been entered", would perhaps be better.

STEPS TO REPRODUCE
1. remove password from Kmail account
2. Restart Kmail, and close the password input screen ie don't enter your password.
3. Look at the notification that comes up within KDE.

OBSERVED RESULT
Receive notification that "Resource Mail (james) is broken".

EXPECTED RESULT
Receive notification that "Kmail needs a password to connect to the email server"

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Opensuse Tumbleweed (20190909) 
(available in About System)
KDE Plasma Version: 5.16.5
KDE Frameworks Version: 5.61.0
Qt Version: 5.13.1

ADDITIONAL INFORMATION
n/a
Comment 1 Allen Winter 2019-10-14 21:40:54 UTC
patch created at https://phabricator.kde.org/D24646
Comment 2 Laurent Montel 2019-10-15 06:15:04 UTC
Git commit cdc4e6933c10eae1389ba8b19ab28b121fc14c4d by Laurent Montel.
Committed on 15/10/2019 at 06:13.
Pushed by mlaurent into branch 'master'.

Fix improve notification message
FIXED-IN: 5.13.0

M  +1    -1    src/kmkernel.cpp

https://commits.kde.org/kmail/cdc4e6933c10eae1389ba8b19ab28b121fc14c4d