Fix improve notification message

BUG: 411992
FIXED-IN: 5.13.0